Run code cleanup