@@ -21,15 +21,15 @@ import com.vonage.client.VonageClientException;
 import com.vonage.client.auth.ApiKeyQueryParamsAuthMethod;
 import com.vonage.client.auth.AuthMethod;
 import com.vonage.client.common.HttpMethod;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.Map;
 
 abstract class VerifyEndpointTestSpec<T, R> extends DynamicEndpointTestSpec<T, R> {
 
 	@Override
 	protected Collection<Class<? extends AuthMethod>> expectedAuthMethods() {
-		return Arrays.asList(ApiKeyQueryParamsAuthMethod.class);
+		return List.of(ApiKeyQueryParamsAuthMethod.class);
 	}
 
 	@Override
